--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <div class="download">
       <a class="link-download" href="./skillbox.docx" download>Скачать программу</a>
     </div>
+    <div class="special-app">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga porro nam qui placeat maxime fugit nostrum. Iure, nihil laborum distinctio adipisci nesciunt sequi mollitia quas dolorum! Provident fuga harum obcaecati?
+    </div>
   </div>
 </body>
 </html>
